canvas is displayed :-)

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
-    <head>
-        <title>ES6 Pong</title>
-    </head>
-    <body>
-        <h1>ES6 Pong v. 0.002</h1>
-        <script src="game.js"/>
-        <div id='game'></div>
-    </body>
+
+<head>
+  <title>ES6 Pong</title>
+</head>
+
+<body>
+  <h1>ES6 Pong v. 0.002</h1>
+  <canvas id='game' tabindex="1" width="640" height="480"></canvas>
+  <script src="game.js"></script>
+</body>
+
 </html>
